[cli] added packaging execution to create a java8 standalone executable (sccJava) and an additional one working with Java9+ (scc) for sake of preventing the warnings reported in #3 in unix environments